samples/_failures_safe/1761530686_f034f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea2dc113.c: In function ‘main’:
./samples/SAFE/__tmp_ea2dc113.c:163:9: error: expected declaration or statement at end of input
  163 |         int u, v, weight;
      |         ^~~
./samples/SAFE/__tmp_ea2dc113.c:163:9: error: expected declaration or statement at end of input
